Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-11606

Wrong error message: 'iostream' file not found

XMLWordPrintable

      1. Enable the ClangCodeModel plugin and restart Creator.
      2. In "Tools" -> "Options..." -> "C++" -> "Code Model", enable Clang for all file types.
      3. Create a new Plain C++ Project (Qbs Build).
        The project is created and its main.cpp is shown. The first line is underlined.
      4. Hover the first line with the mouse.
        You'll see a tooltip: "'iostream' file not found". Building the project works fine though. Even "Follow symbol under cursor" works for iostream.
      5. Close and reopen main.cpp.
        The underline and the tooltip are gone.

      When using Creator's built-in code model none of these error indicator will be shown. They aren't shown either when using a qmake-based project.

        For Gerrit Dashboard: QTCREATORBUG-11606
        # Subject Branch Project Status CR V

            kosjar Nikolai Kosjar
            rlohning Robert Löhning
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes